# dwin-kitchen-clock

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.git11/: COMMIT_EDITMSG  index
dwin/: DWprj.hmi  DWprj.tft
dwin/TFT/: 00_ST.bmp.tft  01_L.bmp.tft  02_H.bmp.tft  03_N.bmp.tft  04_C.bmp.tft  05_TIM1.bmp.tft  06_TIM2.bmp.tft  07_CLOUD.bmp.tft  10_DARKCLOUD.bmp.tft  11_FOG.bmp.tft  11_FOG_result.jpg.tft  12_REIN.bmp.tft  15_SNOW.bmp.tft  16_THUNDER.bmp.tft  17_MOON.bmp.tft  19_SEARCH.bmp.tft  20_NOTIF.bmp.tft  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/ap_server/: dwin_server.c  dwin_server.h
main/ap_server/src/: aqua.css  aqua.html  aqua.js  dwin.css  dwin.html  dwin.js  index.html  script.js  setting.css  setting.js  style.css
main/basic/: dwin_common.h  dwin_config.h  dwin_data_types.h  dwin_defines.h  screen_keys.h
main/bme280/: bmp280_main.c  bmp280_main.h  bmx280.c  bmx280.h  bmx280_bits.h
main/driver/: dwin_commands.h  dwin_drivers.c  dwin_drivers.h
main/dwin_system/: dwin_init.c  dwin_init.h
main/screen_handlers/: screen_handlers.c  screen_handlers.h  show_screen_handlers.c  show_screen_handlers.h
main/show/: show_data.c  show_data.h
main/tasks/: dwin_events.c  dwin_events.h  dwin_timer.c  dwin_timer.h  dwin_uart.c  dwin_uart.h
main/tools/: device_info.c  device_info.h  dwin_help.c  dwin_help.h  dwin_memory.c  dwin_memory.h  parser.c  parser.h  sensor.c  sensor.h
main/weather_client/: dwin_services.c  dwin_services.h  dwin_weather.c  dwin_weather.h  help.txt
main/wifi/: espnow_dwin.c  espnow_dwin.h  wifi_dwin.c  wifi_dwin.h
(+2 files in other folders)
