idf_component_register(
                SRC_DIRS "." 
                        "./basic"
                        "./weather_client"
                        "./driver"
                        "./tools"
                        "./tasks"
                        "./ap_server"
                        "./dwin_system"
                        "./screen_handlers"
                        "./show"
                        "./wifi"
                        "./bme280"
                INCLUDE_DIRS "." 
                        "./basic"
                        "./weather_client"
                        "./driver"
                        "./tools"
                        "./tasks"
                        "./ap_server"
                        "./dwin_system"
                        "./screen_handlers"
                        "./show"
                        "./wifi"
                        "./bme280"
                EMBED_FILES 
                        "./ap_server/src/aqua.css"
                    "./ap_server/src/aqua.js"
                    "./ap_server/src/aqua.html"
                    "./ap_server/src/setting.js"
                    "./ap_server/src/setting.css"
                    "./ap_server/src/index.html"
                    "./ap_server/src/style.css"
                    "./ap_server/src/script.js"
                    "./ap_server/src/dwin.html"
                    "./ap_server/src/dwin.css"
                    "./ap_server/src/dwin.js"
                    "./ap_server/src/favicon.ico")
